# ai-contribution-analyst

backend/: .gitignore  main.py  pyproject.toml
backend/app/agent/: loader.py  openai.py  system_prompt.py
backend/app/agent/tools/: github_loader_commits.py  github_loader_files.py  github_retriever.py
backend/app/api/routers/: chat.py
backend/app/engine/: automerging_retrieval.py  github.py  sentence_window_retrieval.py
backend/app/tools/: github_toolspec.py
backend/data/: commit_data.json
backend/sentence_index/: index_store.json
frontend/: package-lock.json  package.json
